add api GetOpenerGameRoundInfo
